@@ -1,3 +1,6 @@
+2019-05-11 Magnus Hagdorn
+ * piccolo3/common/PiccoloSpectra.py: use new method to compute wavelengths
+
 2019-05-08 Magnus Hagdorn
  * piccolo3/common/PiccoloSpectra.py: add new method to get wavelengths as a
    numpy array
